GitHubTest1/ Email-to-anything/objects/Std_Objects_Inc__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Standard objects incorporated</description>
    <fields>
        <fullName>Allow_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable allow record insert selection options</description>
        <label>Enable Insert Allowed Select Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Message_Object__c</fullName>
        <description>Email message object name</description>
        <label>Email Message Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Allow_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable insert not allowed selection options</description>
        <label>Enable Insert Not Allowed Select Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Prefix__c</fullName>
        <description>Object prefix</description>
        <label>Object Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Std Objects Incorporated</label>
</CustomObject>